# kivi

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  release.sh
examples/: 01_hello_agent.py  02_streaming_chat.py  03_bash_tool.py  04_custom_tool.py  05_sub_agent.py  06_web_search_agent.py  07_markdown_agent_file.py  08_markdown_agent_url.py  09_research_agent.py  10_thinking_mode.py  11_markdown_agent_repl.py  12_programmatic_pipeline.py  13_markdown_chromadb_query.py  14_parallel_tool_calls.py  15_multi_doc_research.py  16_kivi_subagent_isolation.py  17_event_inspector.py
kivi_ai/: __init__.py  __main__.py  cli.py  server.py
kivi_ai/agent/: __init__.py  agent.py  context.py  display.py  events.py  messages.py  provider.py  repl.py  sessions.py  tools.py  web_tools.py
kivi_ai/agents/: __init__.py
kivi_ai/agents/markdown/: __init__.py  agent.py  store.py  tools.py
kivi_ai/core/: __init__.py  interfaces.py  registry.py  types.py
kivi_ai/frontend/: .js_funcs  index.html
kivi_ai/frontend/css/: styles.css
kivi_ai/frontend/js/: agents.js  chat.js  dashboards.js  init.js  input.js  rendering.js  sessions.js  settings.js  state.js  ui.js  upload.js
kivi_ai/providers/: claude_provider.py  config.py  copilot_provider.py  openai_provider.py
kivi_ai/reliable/: __init__.py  agents.py  create_todos.py  test_run.py
kivi_ai/scaling/: README.md  __init__.py  agent.py  db.py  schema.sql  test_run.py
kivi_ai/sessions/: __init__.py  compaction.py  manager.py  store.py
kivi_ai/streaming/: __init__.py  adapter.py  sse.py
kivi_ai/tools/: builtins.py
kivi_ai/tools/markdown/: __init__.py  custom_markdownify.py  mrkdwn_analysis.py  tools.py
task_openai/: openai_news_today.md
